--- a/Lista 1 Esteban.ipynb
+++ b/Lista 1 Esteban.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "0.9028829345762204"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "34.667071929915394"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -402,13 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SQE = 2750.5394560000004'"
+       "'SQE = 239.17734399999972'"
       ]
      },
      "metadata": {},
@@ -417,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "'SQR = 239.17734399999972'"
+       "'SQR = 2750.5394560000004'"
       ]
      },
      "metadata": {},
@@ -434,8 +434,8 @@
     }
    ],
    "source": [
-    "SQE = r * varianciaXy\n",
-    "SQR = varianciaXy - SQE\n",
+    "SQR = r * varianciaXy\n",
+    "SQE = varianciaXy - SQR\n",
     "\n",
     "display(f'SQE = {SQE}')\n",
     "display(f'SQR = {SQR}')\n",
@@ -444,13 +444,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'QMR = 239.17734399999972'"
+       "'QMR = 2750.5394560000004'"
       ]
      },
      "metadata": {},
@@ -459,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "'QME = 229.21162133333337'"
+       "'QME = 19.93144533333331'"
       ]
      },
      "metadata": {},
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -522,14 +522,14 @@
        "    <tr>\n",
        "      <td>Regressão</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>239.177344</td>\n",
-       "      <td>239.177344</td>\n",
+       "      <td>2750.539456</td>\n",
+       "      <td>2750.539456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Erro</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>2750.539456</td>\n",
-       "      <td>229.211621</td>\n",
+       "      <td>239.177344</td>\n",
+       "      <td>19.931445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Total</td>\n",
@@ -542,13 +542,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           Grau de liberdade           SQ          QM\n",
-       "Regressão                1.0   239.177344  239.177344\n",
-       "Erro                    12.0  2750.539456  229.211621\n",
-       "Total                   13.0  2989.716800  229.978215"
+       "           Grau de liberdade           SQ           QM\n",
+       "Regressão                1.0  2750.539456  2750.539456\n",
+       "Erro                    12.0   239.177344    19.931445\n",
+       "Total                   13.0  2989.716800   229.978215"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,13 +563,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'F = 1.0434782608695639'"
+       "'F = 138.00000000000017'"
       ]
      },
      "metadata": {},
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vendo essa tabela F [aqui](https://static.docsity.com/documents_pages/notas/2009/11/19/1fdbfadc3f645ec9e754467becf230bb.png), notamos que valor para númerador 1 e denominador 12 (graus de liberdade) seria 3.177. Nosso F é menor, logo, a hipótese nula não pode ser rejeitada."
+    "Vendo essa tabela F [aqui](https://static.docsity.com/documents_pages/notas/2009/11/19/1fdbfadc3f645ec9e754467becf230bb.png), notamos que valor para númerador 1 e denominador 12 (graus de liberdade) seria 3.177. Nosso F é maior, logo, a hipótese nula pode ser rejeitada."
    ]
   },
   {
@@ -766,7 +766,7 @@
     {
      "data": {
       "text/plain": [
-       "'SQR = 550.3838222222221'"
+       "'SQR = 523.7232283990307'"
       ]
      },
      "metadata": {},
@@ -775,7 +775,7 @@
     {
      "data": {
       "text/plain": [
-       "'SQT = 577.0444160454135'"
+       "'SQT = 550.3838222222222'"
       ]
      },
      "metadata": {},
@@ -784,8 +784,8 @@
    ],
    "source": [
     "SQE = np.square(y_pred - y).sum()\n",
-    "SQR = np.square(y_pred - y.mean()).sum()\n",
-    "SQT = SQE + SQR\n",
+    "SQT = np.square(y - y.mean()).sum()\n",
+    "SQR = SQT - SQE\n",
     "\n",
     "display(f'SQE = {SQE}')\n",
     "display(f'SQR = {SQR}')\n",
@@ -809,7 +809,7 @@
     {
      "data": {
       "text/plain": [
-       "'QMR = 550.3838222222221'"
+       "'QMR = 523.7232283990307'"
       ]
      },
      "metadata": {},
@@ -818,7 +818,7 @@
     {
      "data": {
       "text/plain": [
-       "'QMT = 33.94378917914197'"
+       "'QMT = 32.37551895424836'"
       ]
      },
      "metadata": {},
@@ -870,8 +870,8 @@
        "    <tr>\n",
        "      <td>Regressão</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>550.383822</td>\n",
-       "      <td>550.383822</td>\n",
+       "      <td>523.723228</td>\n",
+       "      <td>523.723228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Erro</td>\n",
@@ -882,8 +882,8 @@
        "    <tr>\n",
        "      <td>Total</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>577.044416</td>\n",
-       "      <td>33.943789</td>\n",
+       "      <td>550.383822</td>\n",
+       "      <td>32.375519</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -891,9 +891,9 @@
       ],
       "text/plain": [
        "           Grau de liberdade          SQ          QM\n",
-       "Regressão                1.0  550.383822  550.383822\n",
+       "Regressão                1.0  523.723228  523.723228\n",
        "Erro                    16.0   26.660594    1.666287\n",
-       "Total                   17.0  577.044416   33.943789"
+       "Total                   17.0  550.383822   32.375519"
       ]
      },
      "execution_count": 26,
@@ -925,7 +925,7 @@
     {
      "data": {
       "text/plain": [
-       "'F = 330.3055143466195'"
+       "'F = 314.30551434661953'"
       ]
      },
      "metadata": {},
@@ -949,6 +949,32 @@
    "metadata": {},
    "source": [
     "É pequeno sim."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) Você acha que, conhecer o volume do pacote, ajuda a prever o tempo de empacotamento?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'O modelo que criamos tem coeficiente de explicação R² de 0.9515599973205117 então acho que sim.'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(f'O modelo que criamos tem coeficiente de explicação R² de {SQR/SQT} então acho que sim.')"
    ]
   }
  ],
