--- a/Lista 1 Esteban.ipynb
+++ b/Lista 1 Esteban.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "0.9028829345762204"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "34.667071929915394"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
@@ -548,7 +548,7 @@
        "Total                   13.0  2989.716800   229.978215"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "Total                   17.0  550.383822   32.375519"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -975,6 +975,70 @@
    ],
    "source": [
     "display(f'O modelo que criamos tem coeficiente de explicação R² de {SQR/SQT} então acho que sim.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5) Nas situações abaixo, escolha como Hipótese Nula (Ho), aquela que para você leva a um erro tipo I mais importante. Descreva quais os dois erros em cada caso:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"font-weight: bold\">NOTA: Estou considerando como \"mais importante\" aquela que caso escolhida, é a mais segura/que mais previne perigos</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) O trabalho de um operador de radar é detectar aeronave inimigas. Quando surge alguma coisa estranha na tela, ele deve decidir entre as hipóteses:\n",
+    "    1. Está começando um ataque\n",
+    "    2. Tudo bem, apenas uma leve interferência"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A hipótese nula é a 2, pois caso seja rejeitada, é menos perigosa visto que pode estar prevenindo um possível ataque."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Num Júri, um individuo está sendo julgado por um crime. As hipóteses sujeitas ao júri são: \n",
+    "    1. O acusado é inocente\n",
+    "    2. O acusado é culpado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui estou em impasse:\n",
+    "    1. Caso escolha a primeira, rejeitar a hipótese significaria em potencialmente punir um inocente e arruinar com sua vida.\n",
+    "    2. Caso escolha a senha, rejeitar pode fazer com que um culpado passe impune pela lei"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) Um pesquisador acredita que descobriu uma vacina contra resfriado. Ele irá conduzir um pesquisa de laboratório para verificar a veracidade da afirmação. De acordo com o  resultado, ele lançará ou não a vacina no mercado. As hipóteses que pode testar são:\n",
+    "    1. A vacina é eficaz\n",
+    "    2. A vacina não é eficaz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A hipótese nula é que a vacina não é eficaz, visto que se uma vacina boa for rejeitada é pior do que uma vacina ruim ser aprovada. Nota: Considerar \"ruim\" como ineficaz mas não nociva à saúde."
    ]
   }
  ],
